Rework repository to return more complete info about fetched entities